--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">robobo-hri-messaging</string>
+    <string name="msg_custom_activity">Message</string>
 </resources>
